syntax = "proto3";

import "google/protobuf/empty.proto";

package guru.qa.grpc.rococo;

option java_multiple_files = true;
option java_package = "guru.qa.grpc.rococo.grpc";
option java_outer_classname = "RococoProto";

service RococoArtistService {
  rpc GetArtist(GetAristRequest) returns (GetAristResponse);
}

message GetAristRequest {
  bytes uuid = 1;
}

message GetAristResponse {
  string name = 1;
  string biography = 2;
  bytes photo = 3;
  bytes uuid = 4;
}
